# test_python

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: Readme.md  main.yml
lib/: __init__.py  my_function.py
tests/: __init__.py  test_my_function.py
