[project]
name = "test_python"
version = "0.1.0"
description = "Test of all developpement python feature"
authors = [
    {name = "Titouan Robert",email = "you@example.com"}
]
license = {text = "MIT"}

requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "flake8-pyproject (>=1.2.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
isort = "^6.0.1"
flake8 = "^7.1.2"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pytest-cov = "^6.0.0"


[tool.pytest.ini_options]
testpaths = ["tests"]  # Chemin vers le répertoire des tests
addopts = "-ra -q"  # Affiche les résultats de manière concise


[tool.flake8]
per-file-ignores = """
        __init__.py: F401
        ./src/*: E402
    """

[tool.mypy]
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
